--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
@@ -2453,3 +2453,10 @@ input[class="chkBox_config"] {
 	color: #000;
 	padding: 0 5px;
 }
+
+.config-fixed-table-container-inner table tr th:nth-child(7) div {
+	margin-left: 3% !important;
+}
+.config-fixed-table-container-inner table tbody tr td:nth-child(9) input {
+	margin-left: 48px !important;
+}	
